# ShoeStore_backend

./: db.sqlite3  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
api/migrations/manage/commands/: bootstrap_data.py
shoeStore/: asgi.py  settings.py  urls.py  wsgi.py
